fix(alpha,bridge): 补全鉴权配置自动生成并增强配置/数据加载健壮性
- 定位并修复 alpha.properties 未自动生成 auth.* 的问题：启动时自动补齐并落盘 auth.bridge.token、auth.bridge.allowedServerIds、auth.tokenSecret、auth.bootstrapAdmin.*
- 修复 AlphaConfig.save() 覆盖写导致新增键丢失的问题：改为读取旧配置并合并写回，保留未知/新增键
- 增强 AlphaConfig.load() 容错：单个数字/布尔配置值非法时回退默认值，不再导致整次加载失败
- 修复 Bridge 未授权时反复重连刷日志：BridgeClient 在 alphaToken 缺失或 register_ack 失败时明确报错并停止无效重连
- 增强本地持久化容错：DataManager 与 MetricsStorage 遇到脏数据行/坏点时跳过，避免整体加载失败